# hypre

option(HYPRE_SEQUENTIAL "Compile without MPI" OFF)

add_subdirectory("src")

list(APPEND sources
  "src/cmbuild/HYPRE_config.h"
  "src/HYPREf.h"
  "src/HYPRE.h"
  "src/blas/dasum.c"
  "src/blas/daxpy.c"
  "src/blas/dcopy.c"
  "src/blas/ddot.c"
  "src/blas/dgemm.c"
  "src/blas/dgemv.c"
  "src/blas/dger.c"
  "src/blas/dnrm2.c"
  "src/blas/drot.c"
  "src/blas/dscal.c"
  "src/blas/dswap.c"
  "src/blas/dsymm.c"
  "src/blas/dsymv.c"
  "src/blas/dsyr2.c"
  "src/blas/dsyr2k.c"
  "src/blas/dsyrk.c"
  "src/blas/dtrmm.c"
  "src/blas/dtrmv.c"
  "src/blas/dtrsm.c"
  "src/blas/dtrsv.c"
  "src/blas/f2c.c"
  "src/blas/idamax.c"
  "src/blas/lsame.c"
  "src/blas/xerbla.c"
  "src/lapack/dbdsqr.c"
  "src/lapack/dgebd2.c"
  "src/lapack/dgebrd.c"
  "src/lapack/dgelq2.c"
  "src/lapack/dgelqf.c"
  "src/lapack/dgels.c"
  "src/lapack/dgeqr2.c"
  "src/lapack/dgeqrf.c"
  "src/lapack/dgesvd.c"
  "src/lapack/dgetrf.c"
  "src/lapack/dgetri.c"
  "src/lapack/dgetrs.c"
  "src/lapack/dgetf2.c"
  "src/lapack/dlabad.c"
  "src/lapack/dlabrd.c"
  "src/lapack/dlacpy.c"
  "src/lapack/dlae2.c"
  "src/lapack/dlaev2.c"
  "src/lapack/dlamch.c"
  "src/lapack/dlange.c"
  "src/lapack/dlanst.c"
  "src/lapack/dlansy.c"
  "src/lapack/dlapy2.c"
  "src/lapack/dlarfb.c"
  "src/lapack/dlarf.c"
  "src/lapack/dlarfg.c"
  "src/lapack/dlarft.c"
  "src/lapack/dlartg.c"
  "src/lapack/dlas2.c"
  "src/lapack/dlascl.c"
  "src/lapack/dlaset.c"
  "src/lapack/dlasq1.c"
  "src/lapack/dlasq2.c"
  "src/lapack/dlasq3.c"
  "src/lapack/dlasq4.c"
  "src/lapack/dlasq5.c"
  "src/lapack/dlasq6.c"
  "src/lapack/dlasr.c"
  "src/lapack/dlasrt.c"
  "src/lapack/dlassq.c"
  "src/lapack/dlaswp.c"
  "src/lapack/dlasv2.c"
  "src/lapack/dlatrd.c"
  "src/lapack/dorg2l.c"
  "src/lapack/dorg2r.c"
  "src/lapack/dorgbr.c"
  "src/lapack/dorgl2.c"
  "src/lapack/dorglq.c"
  "src/lapack/dorgql.c"
  "src/lapack/dorgqr.c"
  "src/lapack/dorgtr.c"
  "src/lapack/dorm2r.c"
  "src/lapack/dormbr.c"
  "src/lapack/dorml2.c"
  "src/lapack/dormlq.c"
  "src/lapack/dormqr.c"
  "src/lapack/dpotf2.c"
  "src/lapack/dpotrf.c"
  "src/lapack/dpotrs.c"
  "src/lapack/dsteqr.c"
  "src/lapack/dsterf.c"
  "src/lapack/dsyev.c"
  "src/lapack/dsygs2.c"
  "src/lapack/dsygst.c"
  "src/lapack/dsygv.c"
  "src/lapack/dsytd2.c"
  "src/lapack/dsytrd.c"
  "src/lapack/dtrti2.c"
  "src/lapack/dtrtri.c"
  "src/lapack/ieeeck.c"
  "src/lapack/ilaenv.c"
  "src/lapack/lsame.c"
  "src/lapack/xerbla.c"
  "src/utilities/HYPRE_utilities.h"
  "src/utilities/_hypre_utilities.h"
  "src/utilities/hypre_hopscotch_hash.h"
  "src/utilities/HYPRE_error_f.h"
  "src/utilities/fortran.h"
  "src/utilities/fortran_matrix.h"
  "src/utilities/amg_linklist.c"
  "src/utilities/binsearch.c"
  "src/utilities/exchange_data.c"
  "src/utilities/F90_HYPRE_error.c"
  "src/utilities/fortran_matrix.c"
  "src/utilities/hypre_ap.c"
  "src/utilities/hypre_complex.c"
  "src/utilities/hypre_error.c"
  "src/utilities/hypre_general.c"
  "src/utilities/hypre_hopscotch_hash.c"
  "src/utilities/hypre_memory.c"
  "src/utilities/hypre_merge_sort.c"
  "src/utilities/hypre_mpi_comm_f2c.c"
  "src/utilities/hypre_prefix_sum.c"
  "src/utilities/hypre_printf.c"
  "src/utilities/hypre_qsort.c"
  "src/utilities/mpistubs.c"
  "src/utilities/qsplit.c"
  "src/utilities/random.c"
  "src/utilities/threading.c"
  "src/utilities/timer.c"
  "src/utilities/timing.c"
  "src/multivector/csr_matmultivec.h"
  "src/multivector/interpreter.h"
  "src/multivector/multivector.h"
  "src/multivector/par_csr_matmultivec.h"
  "src/multivector/par_csr_pmvcomm.h"
  "src/multivector/par_multivector.h"
  "src/multivector/seq_multivector.h"
  "src/multivector/temp_multivector.h"
  "src/multivector/multivector.c"
  "src/multivector/temp_multivector.c"
  "src/krylov/HYPRE_krylov.h"
  "src/krylov/HYPRE_lobpcg.h"
  "src/krylov/HYPRE_MatvecFunctions.h"
  "src/krylov/krylov.h"
  "src/krylov/lobpcg.h"
  "src/krylov/bicgstab.c"
  "src/krylov/cgnr.c"
  "src/krylov/gmres.c"
  "src/krylov/flexgmres.c"
  "src/krylov/lgmres.c"
  "src/krylov/HYPRE_bicgstab.c"
  "src/krylov/HYPRE_cgnr.c"
  "src/krylov/HYPRE_gmres.c"
  "src/krylov/HYPRE_lgmres.c"
  "src/krylov/HYPRE_flexgmres.c"
  "src/krylov/HYPRE_pcg.c"
  "src/krylov/pcg.c"
  "src/krylov/HYPRE_lobpcg.c"
  "src/krylov/lobpcg.c"
  "src/seq_mv/HYPRE_seq_mv.h"
  "src/seq_mv/seq_mv.h"
  "src/seq_mv/csr_matop.c"
  "src/seq_mv/csr_matrix.c"
  "src/seq_mv/csr_matvec.c"
  "src/seq_mv/genpart.c"
  "src/seq_mv/HYPRE_csr_matrix.c"
  "src/seq_mv/HYPRE_mapped_matrix.c"
  "src/seq_mv/HYPRE_multiblock_matrix.c"
  "src/seq_mv/HYPRE_vector.c"
  "src/seq_mv/mapped_matrix.c"
  "src/seq_mv/multiblock_matrix.c"
  "src/seq_mv/vector.c"
  "src/parcsr_mv/HYPRE_parcsr_mv.h"
  "src/parcsr_mv/_hypre_parcsr_mv.h"
  "src/parcsr_mv/communicationT.c"
  "src/parcsr_mv/F90_HYPRE_parcsr_matrix.c"
  "src/parcsr_mv/F90_HYPRE_parcsr_vector.c"
  "src/parcsr_mv/F90_parcsr_matrix.c"
  "src/parcsr_mv/F90_par_vector.c"
  "src/parcsr_mv/HYPRE_parcsr_matrix.c"
  "src/parcsr_mv/HYPRE_parcsr_vector.c"
  "src/parcsr_mv/new_commpkg.c"
  "src/parcsr_mv/numbers.c"
  "src/parcsr_mv/par_csr_aat.c"
  "src/parcsr_mv/par_csr_assumed_part.c"
  "src/parcsr_mv/par_csr_bool_matop.c"
  "src/parcsr_mv/par_csr_bool_matrix.c"
  "src/parcsr_mv/par_csr_communication.c"
  "src/parcsr_mv/par_csr_matop.c"
  "src/parcsr_mv/par_csr_matrix.c"
  "src/parcsr_mv/par_csr_matop_marked.c"
  "src/parcsr_mv/par_csr_matvec.c"
  "src/parcsr_mv/par_vector.c"
  "src/parcsr_mv/par_make_system.c"
  "src/parcsr_block_mv/par_csr_block_matrix.h"
  "src/parcsr_block_mv/csr_block_matrix.h"
  "src/parcsr_block_mv/csr_block_matrix.c"
  "src/parcsr_block_mv/csr_block_matvec.c"
  "src/parcsr_block_mv/par_csr_block_matrix.c"
  "src/parcsr_block_mv/par_csr_block_matvec.c"
  "src/parcsr_block_mv/par_csr_block_comm.c"
  "src/parcsr_block_mv/par_csr_block_rap.c"
  "src/parcsr_block_mv/par_csr_block_rap_communication.c"
  "src/parcsr_block_mv/par_csr_block_interp.c"
  "src/parcsr_block_mv/par_csr_block_relax.c"
  "src/parcsr_block_mv/par_block_nodal_systems.c"
  "src/distributed_matrix/distributed_matrix.h"
  "src/distributed_matrix/distributed_matrix.c"
  "src/distributed_matrix/HYPRE_distributed_matrix.c"
  "src/distributed_matrix/distributed_matrix_ISIS.c"
  "src/distributed_matrix/distributed_matrix_PETSc.c"
  "src/distributed_matrix/distributed_matrix_parcsr.c"
  "src/IJ_mv/HYPRE_IJ_mv.h"
  "src/IJ_mv/_hypre_IJ_mv.h"
  "src/IJ_mv/aux_parcsr_matrix.c"
  "src/IJ_mv/aux_par_vector.c"
  "src/IJ_mv/F90_HYPRE_IJMatrix.c"
  "src/IJ_mv/F90_HYPRE_IJVector.c"
  "src/IJ_mv/F90_IJMatrix.c"
  "src/IJ_mv/HYPRE_IJMatrix.c"
  "src/IJ_mv/HYPRE_IJVector.c"
  "src/IJ_mv/IJ_assumed_part.c"
  "src/IJ_mv/IJMatrix.c"
  "src/IJ_mv/IJMatrix_parcsr.c"
  "src/IJ_mv/IJVector.c"
  "src/IJ_mv/IJVector_parcsr.c"
  "src/matrix_matrix/HYPRE_matrix_matrix_protos.h"
  "src/matrix_matrix/HYPRE_ConvertParCSRMatrixToDistributedMatrix.c"
  "src/matrix_matrix/HYPRE_ConvertPETScMatrixToDistributedMatrix.c"
  "src/distributed_ls/pilut/HYPRE_DistributedMatrixPilutSolver_protos.h"
  "src/distributed_ls/pilut/HYPRE_DistributedMatrixPilutSolver_types.h"
  "src/distributed_ls/pilut/comm.c"
  "src/distributed_ls/pilut/debug.c"
  "src/distributed_ls/pilut/distributed_qsort.c"
  "src/distributed_ls/pilut/distributed_qsort_si.c"
  "src/distributed_ls/pilut/HYPRE_DistributedMatrixPilutSolver.c"
  "src/distributed_ls/pilut/ilut.c"
  "src/distributed_ls/pilut/parilut.c"
  "src/distributed_ls/pilut/parutil.c"
  "src/distributed_ls/pilut/pblas1.c"
  "src/distributed_ls/pilut/serilut.c"
  "src/distributed_ls/pilut/trifactor.c"
  "src/distributed_ls/pilut/util.c"
  "src/distributed_ls/ParaSails/ConjGrad.c"
  "src/distributed_ls/ParaSails/DiagScale.c"
  "src/distributed_ls/ParaSails/FGmres.c"
  "src/distributed_ls/ParaSails/Hash.c"
  "src/distributed_ls/ParaSails/hypre_ParaSails.c"
  "src/distributed_ls/ParaSails/LoadBal.c"
  "src/distributed_ls/ParaSails/Matrix.c"
  "src/distributed_ls/ParaSails/Mem.c"
  "src/distributed_ls/ParaSails/Numbering.c"
  "src/distributed_ls/ParaSails/OrderStat.c"
  "src/distributed_ls/ParaSails/ParaSails.c"
  "src/distributed_ls/ParaSails/PrunedRows.c"
  "src/distributed_ls/ParaSails/RowPatt.c"
  "src/distributed_ls/ParaSails/StoredRows.c"
  "src/distributed_ls/Euclid/blas_dh.c"
  "src/distributed_ls/Euclid/Euclid_apply.c"
  "src/distributed_ls/Euclid/Euclid_dh.c"
  "src/distributed_ls/Euclid/ExternalRows_dh.c"
  "src/distributed_ls/Euclid/Factor_dh.c"
  "src/distributed_ls/Euclid/getRow_dh.c"
  "src/distributed_ls/Euclid/globalObjects.c"
  "src/distributed_ls/Euclid/Hash_dh.c"
  "src/distributed_ls/Euclid/Hash_i_dh.c"
  "src/distributed_ls/Euclid/ilu_mpi_bj.c"
  "src/distributed_ls/Euclid/ilu_mpi_pilu.c"
  "src/distributed_ls/Euclid/ilu_seq.c"
  "src/distributed_ls/Euclid/io_dh.c"
  "src/distributed_ls/Euclid/krylov_dh.c"
  "src/distributed_ls/Euclid/Mat_dh.c"
  "src/distributed_ls/Euclid/mat_dh_private.c"
  "src/distributed_ls/Euclid/MatGenFD.c"
  "src/distributed_ls/Euclid/Mem_dh.c"
  "src/distributed_ls/Euclid/Numbering_dh.c"
  "src/distributed_ls/Euclid/Parser_dh.c"
  "src/distributed_ls/Euclid/shellSort_dh.c"
  "src/distributed_ls/Euclid/sig_dh.c"
  "src/distributed_ls/Euclid/SortedList_dh.c"
  "src/distributed_ls/Euclid/SortedSet_dh.c"
  "src/distributed_ls/Euclid/SubdomainGraph_dh.c"
  "src/distributed_ls/Euclid/TimeLog_dh.c"
  "src/distributed_ls/Euclid/Timer_dh.c"
  "src/distributed_ls/Euclid/Vec_dh.c"
  "src/parcsr_ls/HYPRE_parcsr_ls.h"
  "src/parcsr_ls/_hypre_parcsr_ls.h"
  "src/parcsr_ls/amg_hybrid.c"
  "src/parcsr_ls/aux_interp.c"
  "src/parcsr_ls/F90_hypre_laplace.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_amg.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_bicgstab.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_block.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_cgnr.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_Euclid.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_gmres.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_flexgmres.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_lgmres.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_hybrid.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_int.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_ParaSails.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_pcg.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_pilut.c"
  "src/parcsr_ls/F90_HYPRE_parcsr_schwarz.c"
  "src/parcsr_ls/F90_HYPRE_ams.c"
  "src/parcsr_ls/gen_redcs_mat.c"
  "src/parcsr_ls/HYPRE_parcsr_amg.c"
  "src/parcsr_ls/HYPRE_parcsr_bicgstab.c"
  "src/parcsr_ls/HYPRE_parcsr_block.c"
  "src/parcsr_ls/HYPRE_parcsr_cgnr.c"
  "src/parcsr_ls/HYPRE_parcsr_Euclid.c"
  "src/parcsr_ls/HYPRE_parcsr_gmres.c"
  "src/parcsr_ls/HYPRE_parcsr_flexgmres.c"
  "src/parcsr_ls/HYPRE_parcsr_lgmres.c"
  "src/parcsr_ls/HYPRE_parcsr_hybrid.c"
  "src/parcsr_ls/HYPRE_parcsr_int.c"
  "src/parcsr_ls/HYPRE_parcsr_mgr.c"
  "src/parcsr_ls/HYPRE_parcsr_ParaSails.c"
  "src/parcsr_ls/HYPRE_parcsr_pcg.c"
  "src/parcsr_ls/HYPRE_parcsr_pilut.c"
  "src/parcsr_ls/HYPRE_parcsr_schwarz.c"
  "src/parcsr_ls/HYPRE_ams.c"
  "src/parcsr_ls/HYPRE_ads.c"
  "src/parcsr_ls/HYPRE_ame.c"
  "src/parcsr_ls/par_amg.c"
  "src/parcsr_ls/par_amg_setup.c"
  "src/parcsr_ls/par_amg_solve.c"
  "src/parcsr_ls/par_amg_solveT.c"
  "src/parcsr_ls/par_cg_relax_wt.c"
  "src/parcsr_ls/par_coarsen.c"
  "src/parcsr_ls/par_cgc_coarsen.c"
  "src/parcsr_ls/par_cheby.c"
  "src/parcsr_ls/par_coarse_parms.c"
  "src/parcsr_ls/par_coordinates.c"
  "src/parcsr_ls/par_cr.c"
  "src/parcsr_ls/par_cycle.c"
  "src/parcsr_ls/par_add_cycle.c"
  "src/parcsr_ls/par_difconv.c"
  "src/parcsr_ls/par_gsmg.c"
  "src/parcsr_ls/par_indepset.c"
  "src/parcsr_ls/par_interp.c"
  "src/parcsr_ls/par_jacobi_interp.c"
  "src/parcsr_ls/par_multi_interp.c"
  "src/parcsr_ls/par_laplace_27pt.c"
  "src/parcsr_ls/par_laplace_9pt.c"
  "src/parcsr_ls/par_laplace.c"
  "src/parcsr_ls/par_lr_interp.c"
  "src/parcsr_ls/par_mgr.c"
  "src/parcsr_ls/par_mgr_setup.c"
  "src/parcsr_ls/par_mgr_solve.c"
  "src/parcsr_ls/par_nongalerkin.c"
  "src/parcsr_ls/par_nodal_systems.c"
  "src/parcsr_ls/par_rap.c"
  "src/parcsr_ls/par_rap_communication.c"
  "src/parcsr_ls/par_rotate_7pt.c"
  "src/parcsr_ls/par_vardifconv.c"
  "src/parcsr_ls/par_vardifconv_rs.c"
  "src/parcsr_ls/par_relax.c"
  "src/parcsr_ls/par_relax_more.c"
  "src/parcsr_ls/par_relax_interface.c"
  "src/parcsr_ls/par_scaled_matnorm.c"
  "src/parcsr_ls/par_schwarz.c"
  "src/parcsr_ls/par_stats.c"
  "src/parcsr_ls/par_strength.c"
  "src/parcsr_ls/par_sv_interp.c"
  "src/parcsr_ls/par_sv_interp_ln.c"
  "src/parcsr_ls/partial.c"
  "src/parcsr_ls/pcg_par.c"
  "src/parcsr_ls/schwarz.c"
  "src/parcsr_ls/block_tridiag.c"
  "src/parcsr_ls/ams.c"
  "src/parcsr_ls/ads.c"
  "src/parcsr_ls/ame.c"
  "src/parcsr_ls/par_restr.c"
  "src/parcsr_ls/par_lr_restr.c"
  "src/struct_mv/HYPRE_struct_mv.h"
  "src/struct_mv/_hypre_struct_mv.h"
  "src/struct_mv/assumed_part.c"
  "src/struct_mv/box_algebra.c"
  "src/struct_mv/box_boundary.c"
  "src/struct_mv/box.c"
  "src/struct_mv/box_manager.c"
  "src/struct_mv/communication_info.c"
  "src/struct_mv/computation.c"
  "src/struct_mv/F90_HYPRE_struct_grid.c"
  "src/struct_mv/F90_HYPRE_struct_matrix.c"
  "src/struct_mv/F90_HYPRE_struct_stencil.c"
  "src/struct_mv/F90_HYPRE_struct_vector.c"
  "src/struct_mv/HYPRE_struct_grid.c"
  "src/struct_mv/HYPRE_struct_matrix.c"
  "src/struct_mv/HYPRE_struct_stencil.c"
  "src/struct_mv/HYPRE_struct_vector.c"
  "src/struct_mv/project.c"
  "src/struct_mv/struct_axpy.c"
  "src/struct_mv/struct_communication.c"
  "src/struct_mv/struct_copy.c"
  "src/struct_mv/struct_grid.c"
  "src/struct_mv/struct_innerprod.c"
  "src/struct_mv/struct_io.c"
  "src/struct_mv/struct_matrix.c"
  "src/struct_mv/struct_matrix_mask.c"
  "src/struct_mv/struct_matvec.c"
  "src/struct_mv/struct_scale.c"
  "src/struct_mv/struct_stencil.c"
  "src/struct_mv/struct_vector.c"
  "src/struct_ls/HYPRE_struct_ls.h"
  "src/struct_ls/_hypre_struct_ls.h"
  "src/struct_ls/coarsen.c"
  "src/struct_ls/cyclic_reduction.c"
  "src/struct_ls/F90_HYPRE_struct_bicgstab.c"
  "src/struct_ls/F90_HYPRE_struct_cycred.c"
  "src/struct_ls/F90_HYPRE_struct_gmres.c"
  "src/struct_ls/F90_HYPRE_struct_hybrid.c"
  "src/struct_ls/F90_HYPRE_struct_int.c"
  "src/struct_ls/F90_HYPRE_struct_jacobi.c"
  "src/struct_ls/F90_HYPRE_struct_pcg.c"
  "src/struct_ls/F90_HYPRE_struct_pfmg.c"
  "src/struct_ls/F90_HYPRE_struct_smg.c"
  "src/struct_ls/F90_HYPRE_struct_sparse_msg.c"
  "src/struct_ls/general.c"
  "src/struct_ls/hybrid.c"
  "src/struct_ls/HYPRE_struct_bicgstab.c"
  "src/struct_ls/HYPRE_struct_cycred.c"
  "src/struct_ls/HYPRE_struct_hybrid.c"
  "src/struct_ls/HYPRE_struct_int.c"
  "src/struct_ls/HYPRE_struct_jacobi.c"
  "src/struct_ls/HYPRE_struct_pfmg.c"
  "src/struct_ls/HYPRE_struct_smg.c"
  "src/struct_ls/HYPRE_struct_sparse_msg.c"
  "src/struct_ls/HYPRE_struct_pcg.c"
  "src/struct_ls/HYPRE_struct_gmres.c"
  "src/struct_ls/HYPRE_struct_flexgmres.c"
  "src/struct_ls/HYPRE_struct_lgmres.c"
  "src/struct_ls/jacobi.c"
  "src/struct_ls/pcg_struct.c"
  "src/struct_ls/pfmg2_setup_rap.c"
  "src/struct_ls/pfmg3_setup_rap.c"
  "src/struct_ls/pfmg.c"
  "src/struct_ls/pfmg_relax.c"
  "src/struct_ls/pfmg_setup.c"
  "src/struct_ls/pfmg_setup_interp.c"
  "src/struct_ls/pfmg_setup_rap5.c"
  "src/struct_ls/pfmg_setup_rap7.c"
  "src/struct_ls/pfmg_setup_rap.c"
  "src/struct_ls/pfmg_solve.c"
  "src/struct_ls/point_relax.c"
  "src/struct_ls/red_black_constantcoef_gs.c"
  "src/struct_ls/red_black_gs.c"
  "src/struct_ls/semi.c"
  "src/struct_ls/semi_interp.c"
  "src/struct_ls/semi_restrict.c"
  "src/struct_ls/semi_setup_rap.c"
  "src/struct_ls/smg2_setup_rap.c"
  "src/struct_ls/smg3_setup_rap.c"
  "src/struct_ls/smg_axpy.c"
  "src/struct_ls/smg.c"
  "src/struct_ls/smg_relax.c"
  "src/struct_ls/smg_residual.c"
  "src/struct_ls/smg_setup.c"
  "src/struct_ls/smg_setup_interp.c"
  "src/struct_ls/smg_setup_rap.c"
  "src/struct_ls/smg_setup_restrict.c"
  "src/struct_ls/smg_solve.c"
  "src/struct_ls/sparse_msg2_setup_rap.c"
  "src/struct_ls/sparse_msg3_setup_rap.c"
  "src/struct_ls/sparse_msg.c"
  "src/struct_ls/sparse_msg_filter.c"
  "src/struct_ls/sparse_msg_interp.c"
  "src/struct_ls/sparse_msg_restrict.c"
  "src/struct_ls/sparse_msg_setup.c"
  "src/struct_ls/sparse_msg_setup_rap.c"
  "src/struct_ls/sparse_msg_solve.c"
  "src/sstruct_mv/HYPRE_sstruct_mv.h"
  "src/sstruct_mv/_hypre_sstruct_mv.h"
  "src/sstruct_mv/F90_HYPRE_sstruct_graph.c"
  "src/sstruct_mv/F90_HYPRE_sstruct_grid.c"
  "src/sstruct_mv/F90_HYPRE_sstruct_matrix.c"
  "src/sstruct_mv/F90_HYPRE_sstruct_stencil.c"
  "src/sstruct_mv/F90_HYPRE_sstruct_vector.c"
  "src/sstruct_mv/HYPRE_sstruct_graph.c"
  "src/sstruct_mv/HYPRE_sstruct_grid.c"
  "src/sstruct_mv/HYPRE_sstruct_matrix.c"
  "src/sstruct_mv/HYPRE_sstruct_stencil.c"
  "src/sstruct_mv/HYPRE_sstruct_vector.c"
  "src/sstruct_mv/sstruct_axpy.c"
  "src/sstruct_mv/sstruct_copy.c"
  "src/sstruct_mv/sstruct_graph.c"
  "src/sstruct_mv/sstruct_grid.c"
  "src/sstruct_mv/sstruct_innerprod.c"
  "src/sstruct_mv/sstruct_matrix.c"
  "src/sstruct_mv/sstruct_matvec.c"
  "src/sstruct_mv/sstruct_scale.c"
  "src/sstruct_mv/sstruct_stencil.c"
  "src/sstruct_mv/sstruct_vector.c"
  "src/sstruct_ls/HYPRE_sstruct_ls.h"
  "src/sstruct_ls/_hypre_sstruct_ls.h"
  "src/sstruct_ls/F90_HYPRE_sstruct_bicgstab.c"
  "src/sstruct_ls/F90_HYPRE_sstruct_gmres.c"
  "src/sstruct_ls/F90_HYPRE_sstruct_flexgmres.c"
  "src/sstruct_ls/F90_HYPRE_sstruct_lgmres.c"
  "src/sstruct_ls/F90_HYPRE_sstruct_InterFAC.c"
  "src/sstruct_ls/F90_HYPRE_sstruct_int.c"
  "src/sstruct_ls/F90_HYPRE_sstruct_maxwell.c"
  "src/sstruct_ls/F90_HYPRE_sstruct_pcg.c"
  "src/sstruct_ls/F90_HYPRE_sstruct_split.c"
  "src/sstruct_ls/F90_HYPRE_sstruct_sys_pfmg.c"
  "src/sstruct_ls/HYPRE_sstruct_bicgstab.c"
  "src/sstruct_ls/HYPRE_sstruct_gmres.c"
  "src/sstruct_ls/HYPRE_sstruct_flexgmres.c"
  "src/sstruct_ls/HYPRE_sstruct_lgmres.c"
  "src/sstruct_ls/HYPRE_sstruct_InterFAC.c"
  "src/sstruct_ls/HYPRE_sstruct_int.c"
  "src/sstruct_ls/HYPRE_sstruct_maxwell.c"
  "src/sstruct_ls/HYPRE_sstruct_pcg.c"
  "src/sstruct_ls/HYPRE_sstruct_split.c"
  "src/sstruct_ls/HYPRE_sstruct_sys_pfmg.c"
  "src/sstruct_ls/fac.c"
  "src/sstruct_ls/fac_amr_rap.c"
  "src/sstruct_ls/fac_amr_fcoarsen.c"
  "src/sstruct_ls/fac_amr_zero_data.c"
  "src/sstruct_ls/fac_cf_coarsen.c"
  "src/sstruct_ls/fac_cfstencil_box.c"
  "src/sstruct_ls/fac_CFInterfaceExtents.c"
  "src/sstruct_ls/fac_interp2.c"
  "src/sstruct_ls/fac_relax.c"
  "src/sstruct_ls/fac_restrict2.c"
  "src/sstruct_ls/fac_setup2.c"
  "src/sstruct_ls/fac_solve3.c"
  "src/sstruct_ls/fac_zero_cdata.c"
  "src/sstruct_ls/fac_zero_stencilcoef.c"
  "src/sstruct_ls/hypre_bsearch.c"
  "src/sstruct_ls/krylov.c"
  "src/sstruct_ls/krylov_sstruct.c"
  "src/sstruct_ls/eliminate_rowscols.c"
  "src/sstruct_ls/maxwell_grad.c"
  "src/sstruct_ls/maxwell_physbdy.c"
  "src/sstruct_ls/maxwell_PNedelec.c"
  "src/sstruct_ls/maxwell_PNedelec_bdy.c"
  "src/sstruct_ls/maxwell_semi_interp.c"
  "src/sstruct_ls/maxwell_TV.c"
  "src/sstruct_ls/maxwell_TV_setup.c"
  "src/sstruct_ls/maxwell_zeroBC.c"
  "src/sstruct_ls/hypre_MaxwellSolve.c"
  "src/sstruct_ls/hypre_MaxwellSolve2.c"
  "src/sstruct_ls/nd1_amge_interpolation.c"
  "src/sstruct_ls/node_relax.c"
  "src/sstruct_ls/sstruct_amr_intercommunication.c"
  "src/sstruct_ls/sstruct_owninfo.c"
  "src/sstruct_ls/sstruct_recvinfo.c"
  "src/sstruct_ls/sstruct_sendinfo.c"
  "src/sstruct_ls/sstruct_sharedDOFComm.c"
  "src/sstruct_ls/sys_pfmg.c"
  "src/sstruct_ls/sys_pfmg_relax.c"
  "src/sstruct_ls/sys_pfmg_setup.c"
  "src/sstruct_ls/sys_pfmg_setup_interp.c"
  "src/sstruct_ls/sys_pfmg_setup_rap.c"
  "src/sstruct_ls/sys_pfmg_solve.c"
  "src/sstruct_ls/sys_semi_interp.c"
  "src/sstruct_ls/sys_semi_restrict.c"
)

list(APPEND sources)

source_group("" FILES ${sources})

add_library(hypre STATIC ${sources})

find_package(MPI)

target_include_directories(hypre PUBLIC
    ${MPI_INCLUDE_PATH}
    src
    src/blas
    src/cmbuild
    src/config
    src/distributed_ls
    src/distributed_matrix
    src/examples
    src/FEI_mv
    src/IJ_mv
    src/krylov
    src/lapack
    src/lib
    src/matrix_matrix
    src/multivector
    src/parcsr_block_mv
    src/parcsr_ls
    src/parcsr_mv
    src/seq_mv
    src/sstruct_ls
    src/sstruct_mv
    src/struct_ls
    src/struct_mv
    src/utilities
    )


target_link_libraries(hypre PUBLIC ${MPI_C_LIBRARIES})